# parsec1

./: .gitignore  Cargo.toml  README.md  cargo_check_output.txt  checklog.txt  fix_core_errors.ps1  gui_dist_index.html  gui_dist_main.js  package-lock.json  package.json  tree.txt
ai/: Cargo.toml
ai/src/: lib.rs
ai/src/context/: code_context.rs  memory.rs  mod.rs  project_context.rs
ai/src/providers/: anthropic.rs  copilot.rs  local.rs  mod.rs  openai.rs
cli/: Cargo.toml
cli/src/: args.rs  commands.rs  main.rs  output.rs
core/: Cargo.toml
core/src/: lib.rs  process.rs
core/src/editor/: buffer.rs  cursor.rs  history.rs  mod.rs  movement.rs  position.rs  selection.rs
core/src/git/: branch.rs  commit.rs  diff.rs  mod.rs  remote.rs  repository.rs  stash.rs  status.rs
core/src/syntax/: highlight_style.rs  highlighter.rs  mod.rs  treesitter.rs
core/src/terminal/: buffer.rs  mod.rs  pty.rs  renderer.rs
crates/accessibility/: Cargo.toml
crates/accessibility/benches/: accessibility_bench.rs
crates/accessibility/src/: color_blind.rs  dyslexia.rs  high_contrast.rs  keyboard_nav.rs  lib.rs  motion.rs  screen_reader.rs  voice_control.rs
crates/api-client/: Cargo.toml
crates/api-client/src/: collections.rs  environments.rs  graphql.rs  grpc.rs  lib.rs  rest.rs  websocket.rs
crates/cloud/: Cargo.toml
crates/cloud/src/: aws.rs  azure.rs  docker.rs  gcp.rs  kubernetes.rs  lib.rs  provider.rs  serverless.rs
crates/collaboration/: Cargo.toml
crates/collaboration/benches/: collab_bench.rs
crates/collaboration/src/: comments.rs  crdt.rs  encryption.rs  lib.rs  live_share.rs  metrics.rs  presence.rs  review.rs  signaling.rs
crates/customization/: Cargo.toml
crates/customization/benches/: customization_bench.rs
crates/customization/src/: import_export.rs  keybindings.rs  layouts.rs  lib.rs  profiles.rs  settings_sync.rs  themes.rs
crates/database/: Cargo.toml
crates/database/src/: er_diagram.rs  lib.rs  mongodb.rs  mysql.rs  postgres.rs  query_runner.rs  redis.rs  sqlite.rs
crates/debugging/: Cargo.toml
crates/debugging/src/: breakpoint.rs  callstack.rs  dap.rs  lib.rs  variables.rs  watch.rs
crates/design/: Cargo.toml
crates/design/benches/: design_bench.rs
crates/design/src/: color_picker.rs  font_preview.rs  icon_browser.rs  lib.rs
crates/extension-registry/: Cargo.toml
crates/extension-registry/src/: lib.rs  manager.rs  types.rs
crates/extension-registry/src/sources/: community.rs  local.rs  mod.rs  vsx.rs
crates/extension-sdk/: Cargo.toml
crates/extension-sdk/src/: api.rs  lib.rs  macros.rs  types.rs
crates/game-dev/: Cargo.toml
crates/game-dev/src/: build.rs  debug.rs  engine.rs  lib.rs  project.rs
crates/game-dev/src/assets/: audio.rs  mod.rs  models.rs  preview.rs  textures.rs
crates/game-dev/src/blueprint/: converter.rs  mod.rs  viewer.rs
crates/game-dev/src/lsp/: cpp.rs  csharp.rs  custom.rs  gdscript.rs  mod.rs
crates/game-dev/src/sdk/: asset_importers.rs  build_hooks.rs  engine_trait.rs  mod.rs
crates/game-dev/src/templates/: mod.rs
crates/git/: Cargo.toml
crates/git/src/: lib.rs
crates/language-extensions/: Cargo.toml
crates/language-extensions/src/: lib.rs  loader.rs  registry.rs  types.rs  wasm.rs
crates/learning/: Cargo.toml
crates/learning/benches/: learning_bench.rs
crates/learning/src/: cheat_sheets.rs  lib.rs  playground.rs  snippets.rs  tutorials.rs
crates/mobile-dev/: Cargo.toml
crates/mobile-dev/src/: lib.rs  platform.rs
crates/mobile-dev/src/device/: android.rs  emulator.rs  ios.rs  mod.rs  simulator.rs
crates/mobile-dev/src/frameworks/: custom.rs  flutter.rs  ionic.rs  mod.rs  native-android.rs  native-ios.rs  react-native.rs
crates/mobile-dev/src/sdk/: build_hooks.rs  debug_hooks.rs  mod.rs  platform_trait.rs
crates/mobile-dev/src/templates/: mod.rs
crates/monitoring/: Cargo.toml
crates/monitoring/benches/: monitoring_bench.rs
crates/monitoring/src/: alerts.rs  dashboard.rs  lib.rs  logs.rs  metrics.rs  profiler.rs  system.rs  traces.rs
crates/terminal/: Cargo.toml
crates/terminal/benches/: terminal_bench.rs
crates/terminal/src/: buffer.rs  error.rs  lib.rs  multiplexer.rs  pty.rs  renderer.rs  search.rs  selection.rs  split.rs  themes.rs
crates/testing/: Cargo.toml
crates/testing/src/: coverage.rs  e2e.rs  integration.rs  lib.rs  load_test.rs  unit.rs
extensions/: Cargo.toml
extensions/src/: lib.rs
extensions/src/api/: mobile.rs  mod.rs
extensions/src/registry/: mod.rs  store.rs
extensions/src/runtime/: builder.rs  commands.rs  core.rs  data.rs  events.rs  exports.rs  handle.rs  instance.rs  limiter.rs  memory.rs  mod.rs  presets.rs  sandbox.rs  scheduler.rs  stats.rs  wasm.rs
gui/: .env  .gitignore  .taurignore  Cargo.toml  build.rs  index.html  lib.rs  package-lock.json  package.json  styles.css  tauri.conf.json  vite.config.ts
gui/icons/: .placeholder
gui/public/: index.html
gui/src/: App.tsx  editor_view.rs  lib.rs  main.rs  main.tsx  sidebar.rs  terminal_panel.rs  webview.rs  window.rs
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main.rs
gui/src/components/AI/: Assistant.tsx  Chat.tsx  Copilot.tsx  index.tsx
gui/src/components/API/: Collections.tsx  GraphQLClient.tsx  RESTClient.tsx  WebSocketClient.tsx
gui/src/hooks/: index.ts  useAI.ts  useAPI.ts  useAccessibility.ts  useCloud.ts  useCollaboration.ts  useCustomization.ts  useDatabase.ts  useDebug.ts  useDesign.ts  useEditor.ts  useGit.ts  useLearning.ts  useMobile.ts  useMonitoring.ts  useTerminal.ts  useTheme.ts  useWebSocket.ts
gui/src/lib/: tauri.ts  websocket.ts
gui/src/store/: aiStore.ts  appStore.ts  cloudStore.ts  collaborationStore.ts  databaseStore.ts  designStore.ts  learningStore.ts  mobileStore.ts  monitoringStore.ts
gui/src/styles/: editor.css  global.css  index.css  terminal.css  themes.css
gui/src/types/: index.ts
vscode-compat/: Cargo.toml
vscode-compat/src/: lib.rs
vscode-compat/src/api/: commands.rs  languages.rs  mod.rs  window.rs  workspace.rs
vscode-compat/src/runtime/: js_runtime.rs  mod.rs  node_runtime.rs
(+81 files in other folders)
