[workspace]
resolver = "2"
members = [
    "core",
    "vscode-compat",
    "extensions",
    "ai",
    "gui",
    "cli",
    "crates/extension-registry",
    "crates/extension-sdk",
    "crates/language-extensions", 
    "crates/mobile-dev", "crates/database", "crates/api-client", "crates/cloud", "crates/testing", "crates/debugging", "crates/terminal", "crates/collaboration", "crates/learning", "crates/design", "crates/monitoring", "crates/accessibility", "crates/customization",
     ]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["divyaamshu1"]
license = "MIT"
repository = "https://github.com/divyaamshu1/parsec"     # <-- ADD THIS LINE
homepage = "https://github.com/divyaamshu1/parsec" 

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"           # <-- ADD THIS
serde_yaml = "0.9"
toml = "1.0"
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
log = "0.4"
futures = "0.3"
async-trait = "0.1"
chrono = "0.4"
uuid = { version = "1.21", features = ["v4", "serde"] }
parking_lot = "0.12"
dirs = "6.0"
regex = "1.12"
thiserror = "2.0"

tauri = "2.10.2"
tauri-build = "2.5.5"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-shell = "2.3.5"
tauri-plugin-window-state = "2.4.1"

# Parsec crates
parsec-core = { path = "core" }
parsec-extensions = { path = "extensions" }
parsec-ai = { path = "ai" }
parsec-cli = { path = "cli" }
parsec-gui = { path = "gui" }
parsec-vscode-compat = { path = "vscode-compat" }
