[workspace]
members = [
    "gui/src-tauri",
    "core",
    "extensions",
    "ai",
    "cli",
    "vscode-compat",
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["divyaamshu1"]
license = "MIT"
repository = "https://github.com/divyaamshu1/parsec"

# These settings will be inherited by workspace members
[workspace.dependencies]
tauri = { version = "1.5", features = [
    "api-all", 
    "window-all", 
    "shell-all", 
    "dialog-all", 
    "fs-all", 
    "http-all", 
    "os-all"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12"
dirs = "5.0"
once_cell = "1.19"
regex = "1.7"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json", "gzip"] }
toml = "0.5"

parsec-core = { path = "../core" }
parsec-extensions = { path = "../extensions" }
parsec-ai = { path = "../ai" }
parsec-vscode-compat = { path = "../vscode-compat" }
parsec-cloud = { path = "../crates/cloud" }
parsec-database = { path = "../crates/database" }
parsec-mobile = { path = "../crates/mobile-dev" }
parsec-collaboration = { path = "../crates/collaboration" }
parsec-learning = { path = "../crates/learning" }
parsec-design = { path = "../crates/design" }
parsec-monitoring = { path = "../crates/monitoring" }
parsec-accessibility = { path = "../crates/accessibility" }
parsec-customization = { path = "../crates/customization" }
parsec-terminal = { path = "../crates/terminal" }
parsec-debug = { path = "../crates/debugging" }
parsec-git = { path = "../crates/git" }
parsec-testing = { path = "../crates/testing" }
parsec-api = { path = "../crates/api-client" }
extension-registry = { path = "../crates/extension-registry" }
extension-sdk = { path = "../crates/extension-sdk" }