[package]
name = "parsec-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AI integration for Parsec IDE"
repository = "https://github.com/divyaamshu1/parsec"     # <-- ADD THIS LINE
homepage = "https://github.com/divyaamshu1/parsec" 
keywords = ["ai", "llm", "openai", "anthropic", "copilot"]
categories = ["development-tools", "artificial-intelligence"]

[dependencies]
# Core
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
async-trait = "0.1"
tracing = { workspace = true }
futures = "0.3"

# HTTP client
reqwest = { version = "0.13", features = ["json", "stream"] }

# Utilities
chrono = { workspace = true }
uuid = { version = "1.21", features = ["v4", "serde"] }
parking_lot = "0.12"
dirs = "6.0"
regex = "1.12"

# Parsec dependencies
parsec-core = { path = "../core" }

[dev-dependencies]
tempfile = "3.26"
wiremock = "0.6"

[features]
default = ["openai", "anthropic", "local"]
openai = []
anthropic = []
local = []
copilot = []
all = ["openai", "anthropic", "local", "copilot"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
