[package]
name = "parsec-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Command-line interface for Parsec IDE"
repository = "https://github.com/divyaamshu1/parsec"
homepage = "https://github.com/divyaamshu1/parsec" 
keywords = ["cli", "ide", "terminal", "editor"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive", "cargo", "unicode"] }
clap_complete = "4.5"
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = "1.0"
chrono = { workspace = true }

# Output formatting
colored = "3.1"
tabled = "0.20"
indicatif = "0.18"
console = "0.16"

# Utility crates used by commands
regex = "1"
similar = "2"
notify = "8"
rpassword = "7"
serde_yaml = { version = "0.9", optional = true }

# Parsec crates
parsec-core = { path = "../core" }
parsec-extensions = { path = "../extensions" }
parsec-ai = { path = "../ai" }
parsec-gui = { path = "../gui", optional = true }
libloading = { version = "0.9", optional = true }
winapi = { version = "0.3", features = ["winuser"] }

windows-sys = "=0.61.2"

[features]
default = []                    # ✓ CHANGED: Remove "gui" from defaults
gui = ["libloading"]
win-fallback = []
win-preload = ["libloading"]
yaml = ["serde_yaml"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true