[package]
name = "parsec-extensions"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WASM-based extension system for Parsec IDE"
repository = "https://github.com/divyaamshu1/parsec"     # <-- ADD THIS LINE
homepage = "https://github.com/divyaamshu1/parsec" 
keywords = ["wasm", "extensions", "ide", "plugins"]
categories = ["development-tools", "wasm"]

[dependencies]
# WASM runtime
wasmtime = { version = "41.0", features = ["async"] }
wasmtime-wasi = "41.0"
wasmparser = "0.245"

# Async runtime
tokio = { workspace = true, features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = "1.0"

# Error handling
anyhow = { workspace = true }
thiserror = "2.0"
tracing = { workspace = true }

# Utilities
uuid = { version = "1.21", features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
parking_lot = "0.12"
dirs = "6.0"
regex = "1.12"
lazy_static = "1.5"
once_cell = "1.21"

# HTTP client (for extensions that need it)
reqwest = { version = "0.13", features = ["json", "stream"], optional = true }

# File system
notify = "8.2"
tempfile = "3.26"

# Compression
flate2 = "1.1"
tar = "0.4"

windows-sys = "=0.61.2"

[dev-dependencies]
tempfile = "3.26"
criterion = "0.8"

[features]
default = ["http"]
http = ["dep:reqwest"]
networking = ["http"]
filesystem = []
full = ["http", "networking", "filesystem"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
