[package]
name = "parsec-gui"
version = "0.1.0"
description = "Parsec IDE - The last IDE you'll ever need"
authors = ["divyaamshu1"]
license = "MIT"
repository = "https://github.com/divyaamshu1/parsec"
edition = "2021"

[[bin]]
name = "parsec-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
    "api-all", 
    "window-all", 
    "shell-all", 
    "dialog-all", 
    "fs-all", 
    "http-all", 
    "os-all"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12"
dirs = "5.0"
once_cell = "1.19"

# Parsec backend crates (local paths)
parsec-core = { path = "../core" }
parsec-extensions = { path = "../extensions" }
parsec-ai = { path = "../ai" }
parsec-vscode-compat = { path = "../vscode-compat" }
parsec-cloud = { path = "../crates/cloud" }
parsec-database = { path = "../crates/database" }
parsec-mobile = { path = "../crates/mobile-dev" }
parsec-collaboration = { path = "../crates/collaboration" }
parsec-learning = { path = "../crates/learning" }
parsec-design = { path = "../crates/design" }
parsec-monitoring = { path = "../crates/monitoring" }
parsec-accessibility = { path = "../crates/accessibility" }
parsec-customization = { path = "../crates/customization" }
parsec-terminal = { path = "../crates/terminal" }
parsec-debug = { path = "../crates/debugging" }
parsec-git = { path = "../crates/git" }
parsec-testing = { path = "../crates/testing" }
parsec-api = { path = "../crates/api-client" }
extension-registry = { path = "../crates/extension-registry" }
extension-sdk = { path = "../crates/extension-sdk" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
opt-level = 0
lto = false
codegen-units = 16

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev.package]
parsec-core.opt-level = 1
parsec-ai.opt-level = 1
parsec-terminal.opt-level = 1

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dev]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.'cfg(target_os = "windows")'.dev]
rustflags = ["-C", "target-feature=+crt-static"]