[package]
name = "parsec-cloud"
version = "0.1.0"
edition = "2021"
description = "Unified cloud development tools for Parsec IDE"
authors = ["divyaamshu1"]
license = "MIT"
repository = "https://github.com/divyaamshu1/parsec"
homepage = "https://github.com/divyaamshu1/parsec"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
# Core
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9"
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
regex = { workspace = true }

# AWS
aws-config = { version = "1.1", optional = true }
aws-sdk-lambda = { version = "1.1", optional = true }
aws-sdk-s3 = { version = "1.1", optional = true }
aws-sdk-dynamodb = { version = "1.1", optional = true }
aws-sdk-ec2 = { version = "1.1", optional = true }
aws-sdk-eks = { version = "1.1", optional = true }
aws-sdk-iam = { version = "1.1", optional = true }
aws-sdk-cloudformation = { version = "1.1", optional = true }

# Azure
azure_identity = { version = "0.15", optional = true }
azure_storage = { version = "0.15", optional = true }
azure_core = { version = "0.15", optional = true }
azure_svc_blobstorage = { version = "0.15", optional = true }

# GCP - Official Google Cloud SDK crates
google-cloud-googleapis = { version = "0.16.1", optional = true }
google-cloud-auth = { version = "1.6.0", optional = true }
google-cloud-storage = { version = "1.8.0", optional = true }
google-cloud-pubsub = { version = "0.30.0", optional = true }

# Docker
bollard = { version = "0.16", optional = true }
docker-api = { version = "0.14", optional = true }

# Kubernetes
k8s-openapi = { version = "0.21", features = ["v1_24"], optional = true }
kube = { version = "0.90", features = ["runtime", "derive", "ws"], optional = true }
kube-derive = { version = "0.90", optional = true }

# Serverless
aws_lambda_events = { version = "0.15", optional = true }
aws-sdk-cloudwatchlogs = { version = "1.1", optional = true }

# SSH/Remote
ssh2 = { version = "0.9", optional = true }
russh = { version = "0.40", optional = true }

# Parsec dependencies
parsec-core = { path = "../../core" }
parsec-extensions = { path = "../../extensions" }

[dev-dependencies]
tempfile = "3.8"
wiremock = "0.5"

[features]
default = ["aws", "azure", "gcp", "docker", "kubernetes", "serverless"]
aws = ["dep:aws-config", "dep:aws-sdk-lambda", "dep:aws-sdk-s3", "dep:aws-sdk-dynamodb", "dep:aws-sdk-ec2", "dep:aws-sdk-eks", "dep:aws-sdk-iam", "dep:aws-sdk-cloudformation", "dep:aws-sdk-cloudwatchlogs"]
azure = ["dep:azure_identity", "dep:azure_storage", "dep:azure_core", "dep:azure_svc_blobstorage"]
gcp = ["dep:google-cloud-googleapis", "dep:google-cloud-auth", "dep:google-cloud-storage", "dep:google-cloud-pubsub"]
docker = ["dep:bollard", "dep:docker-api"]
kubernetes = ["dep:k8s-openapi", "dep:kube", "dep:kube-derive"]
serverless = ["aws", "gcp"]
ssh = ["dep:ssh2", "dep:russh"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true