[package]
name = "parsec-collaboration"
version = "0.1.0"
edition = "2021"
description = "Team collaboration tools for Parsec IDE"
authors = ["divyaamshu1"]
license = "MIT"
repository = "https://github.com/divyaamshu1/parsec"
homepage = "https://github.com/divyaamshu1/parsec"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
# Core
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }

# WebRTC
webrtc = { version = "0.10", optional = true }
webrtc-mdns = { version = "0.1", optional = true }

# WebSocket
tokio-tungstenite = { version = "0.20", optional = true }
tungstenite = { version = "0.20", optional = true }

# Signaling
signal-hub = { version = "0.2", optional = true }

# Encryption
aes-gcm = { version = "0.10", optional = true }
x25519-dalek = { version = "2.0", optional = true }

# Parsec dependencies
parsec-core = { path = "../../core" }
parsec-extensions = { path = "../../extensions" }

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["live-share", "comments", "review", "presence"]
live-share = ["dep:webrtc", "dep:webrtc-mdns", "dep:tokio-tungstenite", "dep:tungstenite", "dep:signal-hub"]
comments = []
review = []
presence = []
encryption = ["dep:aes-gcm", "dep:x25519-dalek"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true