[package]
name = "parsec-collaboration"
version = "0.1.0"
edition = "2021"
description = "Real-time collaboration features for Parsec IDE"
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["webrtc", "encryption"]
webrtc = ["dep:webrtc", "dep:turn", "dep:stun"]
encryption = ["dep:rustls", "dep:ring"]
compression = ["dep:lz4"]
metrics = ["dep:prometheus"]

[dependencies]
# Core dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_repr = "0.1"
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4", "v5", "serde"] }
parking_lot = { workspace = true }
once_cell = "1.20"
lazy_static = "1.5"

# WebRTC for P2P
webrtc = { version = "0.17", optional = true }
turn = { version = "0.7", optional = true }
stun = { version = "0.5", optional = true }

# Encryption
rustls = { version = "0.23", optional = true, features = ["ring"] }
ring = { version = "0.17", optional = true }
aes-gcm = { version = "0.10", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
x25519-dalek = { version = "2.0", optional = true }

# Compression
lz4 = { version = "1.26", optional = true }
zstd = { version = "0.13", optional = true }

# WebSocket for signaling
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
reqwest = { workspace = true, features = ["json", "rustls"] }

# CRDTs for conflict-free editing
diamond-types = { git = "https://github.com/josephg/diamond-types", optional = true }
yrs = { version = "0.19", features = ["sync"] }

# Metrics
prometheus = { version = "0.13", optional = true, features = ["process"] }

# Utilities
base64 = "0.22"
hex = "0.4"
rand = "0.8"
sha2 = "0.10"
ed25519-dalek = "2.1"
bs58 = "0.5"
multihash = "0.19"

[dev-dependencies]
tempfile = "3.13"
criterion = "0.5"

[[bench]]
name = "collab_bench"
path = "benches/collab_bench.rs"
harness = false