[package]
name = "parsec-customization"
version = "0.1.0"
edition = "2021"
description = "UI customization system for Parsec IDE"
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["keybindings", "themes", "layouts", "settings-sync"]
keybindings = ["dep:keyboard-types", "dep:keybindings"]
themes = ["dep:css-color", "dep:palette"]
layouts = ["dep:serde_yaml"]
settings-sync = ["dep:reqwest", "dep:git2", "dep:ssh2"]
cloud-sync = ["dep:aws-sdk-s3", "dep:azure_storage_blob"]

[dependencies]
# Core dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true, optional = true }
toml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4", "v5", "serde"] }
parking_lot = { workspace = true }
once_cell = "1.20"
lazy_static = "1.5"

# Keybindings
keyboard-types = { version = "0.7", optional = true }
keybindings = { version = "0.0.2", optional = true }

# Themes
# css-color currently on 0.2 series
css-color = { version = "0.2", optional = true }
palette = { version = "0.7", optional = true, features = ["named", "approx"] }
syntect = { version = "5.2", optional = true }

# Layouts
# druid conflicts with tauri's GTK bindings; using egui only
egui = { version = "0.28", optional = true }

# Settings sync
reqwest = { workspace = true, features = ["json", "multipart"], optional = true }
git2 = { version = "0.20", optional = true, features = ["vendored-openssl"] }
ssh2 = { version = "0.9", optional = true }
aws-sdk-s3 = { version = "1.0", optional = true }
azure_storage_blob = { version = "0.9", optional = true }

# Web platform
web-sys = { version = "0.3", optional = true, features = [
    "console",
    "Window",
    "Document",
    "Storage"
] }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

# Utilities
dirs = { workspace = true }
glob = "0.3"
notify = "6.1"
base64 = "0.22"
url = "2.5"
flate2 = "1.0"
tar = "0.4"

[dev-dependencies]
tempfile = "3.13"
criterion = "0.5"

[[bench]]
name = "customization_bench"
path = "benches/customization_bench.rs"
harness = false