[package]
name = "parsec-database"
version = "0.1.0"
edition = "2021"
description = "Universal database tools for Parsec IDE"
authors = ["divyaamshu1"]
license = "MIT"
repository = "https://github.com/divyaamshu1/parsec"
homepage = "https://github.com/divyaamshu1/parsec"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
# Core
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

# Database drivers
tokio-postgres = { version = "0.7", optional = true }
mysql_async = { version = "0.34", optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
mongodb = { version = "3.0", optional = true }
redis = { version = "0.27", features = ["tokio-comp", "json"], optional = true }

# SQL parsing
sqlparser = "0.51"

# Diagram generation
petgraph = "0.6"

# Utilities
dirs = "6.0"

# Parsec dependencies
parsec-core = { path = "../../core" }
parsec-extensions = { path = "../../extensions" }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[features]
default = ["postgres", "mysql", "sqlite", "mongodb", "redis"]
postgres = ["dep:tokio-postgres"]
mysql = ["dep:mysql_async"]
sqlite = ["dep:rusqlite"]
mongodb = ["dep:mongodb"]
redis = ["dep:redis"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true