[package]
name = "parsec-debug"
version = "0.1.0"
edition = "2021"
description = "Universal debugger with DAP support for Parsec IDE"
authors = ["divyaamshu1"]
license = "MIT"
repository = "https://github.com/divyaamshu1/parsec"
homepage = "https://github.com/divyaamshu1/parsec"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
# Core
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }

# DAP
dap = { version = "0.4.1-alpha1", optional = true }
dap-types = { version = "0.0.1", optional = true }

# IPC
interprocess = "2.1"
named_pipe = "0.4"

# Process
sysinfo = "0.30"
dirs = "4.0"

# Parsec dependencies
parsec-core = { path = "../../core" }
parsec-extensions = { path = "../../extensions" }

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["dep:dap", "dep:dap-types"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true