[package]
name = "parsec-design"
version = "0.1.0"
edition = "2021"
description = "Design tools for Parsec IDE"
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["color-picker", "icon-browser", "font-preview", "svg-editor"]
color-picker = ["dep:colorsys", "dep:palette"]
icon-browser = ["dep:resvg", "dep:tiny-skia"]
font-preview = ["dep:font-kit", "dep:rusttype"]
svg-editor = ["dep:usvg", "dep:svgtypes"]
web-platform = ["dep:web-sys", "dep:js-sys"]

[dependencies]
# Core dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4", "v5", "serde"] }
parking_lot = { workspace = true }
once_cell = "1.20"

# Color manipulation
colorsys = { version = "0.6", optional = true }
palette = { version = "0.7", optional = true, features = ["serializing"] }
# css-color 0.3 does not exist on crates.io; use 0.2.x instead
css-color = "0.2"
colorgrad = "0.6"

# SVG processing
resvg = { version = "0.43", optional = true, features = ["text"] }
tiny-skia = { version = "0.11", optional = true }
usvg = { version = "0.43", optional = true, features = ["text"] }
svgtypes = { version = "0.14", optional = true }

# Font handling
font-kit = { version = "0.14", optional = true }
rusttype = { version = "0.9", optional = true }
fontdb = { version = "0.16" }
ttf-parser = "0.20"

# Icon processing
# icon-park crate not published; icons handled internally
material-icons = "0.1"
# Feather icons are defined manually in code; no crate required

# Image processing
image = { version = "0.25", features = ["png", "jpeg", "gif", "webp"] }
imageproc = "0.25"

# Web platform
web-sys = { version = "0.3", optional = true, features = [
    "console",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "File",
    "FileReader",
    "Blob",
    "Url"
] }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

# Utilities
dirs = "6.0"
base64 = "0.22"
data-url = "0.3"
regex = { workspace = true }

[dev-dependencies]
tempfile = "3.13"
criterion = "0.5"

[[bench]]
name = "design_bench"
path = "benches/design_bench.rs"
harness = false