[package]
name = "extension-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
reqwest = { version = "0.13", features = ["json"] }
async-trait = "0.1"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
