[package]
name = "extension-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for building Parsec extensions"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
async-trait = "0.1"
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = []
wasm = ["wasm-bindgen"]  # For WASM extensions
