[package]
name = "language-extensions"
version = "0.1.0"
edition = "2021"
description = "WASM-based language extensions for Parsec"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tree-sitter = "0.20"
wasmtime = { version = "14.0", optional = true }
async-trait = "0.1"
thiserror = "1.0"

[features]
default = ["wasm"]
wasm = ["dep:wasmtime"]

[dev-dependencies]
tempfile = "3.8"