[package]
name = "parsec-learning"
version = "0.1.0"
edition = "2021"
description = "Interactive learning tools for Parsec IDE"
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["tutorials", "snippets", "playground"]
tutorials = ["dep:tera", "dep:markdown"]
snippets = ["dep:regex", "dep:fuzzy-matcher"]
playground = ["dep:docker"]
ai-learning = ["dep:openai", "dep:anthropic"]

docker = []

tempfile = []

[dependencies]
# Core dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4", "v5", "serde"] }
parking_lot = { workspace = true }
once_cell = "1.20"

# Tutorial rendering
tera = { version = "1.20", optional = true, features = ["builtins"] }
markdown = { version = "1.0", optional = true }
syntect = { version = "5.2", features = ["default-syntaxes", "default-themes"] }

# Snippets
regex = { workspace = true, optional = true }
fuzzy-matcher = { version = "0.3", optional = true }

# Playground
docker = { version = "0.2", optional = true, package = "bollard" }
# podman crate doesn't exist on crates.io; remove to avoid resolution errors
tempfile = "3.13"

# AI integration
openai = { version = "1.0", optional = true }
anthropic = { version = "0.0.8", optional = true }

# WebAssembly for web playground
wasmtime = { version = "24", optional = true }
wasmtime-wasi = { version = "24", optional = true }

# Utilities
reqwest = { workspace = true, features = ["json", "stream"] }
tar = "0.4"
flate2 = "1.0"
git2 = { version = "0.20", default-features = false }

# miscellaneous
dirs = "4.0"

[dev-dependencies]
tempfile = "3.13"
criterion = "0.5"

[[bench]]
name = "learning_bench"
path = "benches/learning_bench.rs"
harness = false